--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
   </ItemGroup>
 
 
@@ -25,6 +25,204 @@
 
 
   <ItemGroup>
+    <None Include="wwwroot\assets\core\scss\bootstrap-grid.css.map" />
+    <None Include="wwwroot\assets\core\scss\bootstrap-grid.scss" />
+    <None Include="wwwroot\assets\core\scss\bootstrap-reboot.css.map" />
+    <None Include="wwwroot\assets\core\scss\bootstrap-reboot.scss" />
+    <None Include="wwwroot\assets\core\scss\bootstrap.css.map" />
+    <None Include="wwwroot\assets\core\scss\bootstrap.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_alert.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_background-variant.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_badge.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_border-radius.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_box-shadow.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_breakpoints.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_buttons.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_caret.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_clearfix.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_float.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_forms.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_gradients.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_grid-framework.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_grid.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_hover.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_image.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_list-group.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_lists.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_nav-divider.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_navbar-align.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_pagination.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_reset-text.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_resize.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_screen-reader.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_size.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_table-row.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_text-emphasis.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_text-hide.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_text-truncate.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_transition.scss" />
+    <None Include="wwwroot\assets\core\scss\mixins\_visibility.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_align.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_background.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_borders.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_clearfix.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_display.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_embed.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_flex.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_float.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_position.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_screenreaders.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_sizing.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_spacing.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_text.scss" />
+    <None Include="wwwroot\assets\core\scss\utilities\_visibility.scss" />
+    <None Include="wwwroot\assets\core\scss\_alert.scss" />
+    <None Include="wwwroot\assets\core\scss\_badge.scss" />
+    <None Include="wwwroot\assets\core\scss\_breadcrumb.scss" />
+    <None Include="wwwroot\assets\core\scss\_button-group.scss" />
+    <None Include="wwwroot\assets\core\scss\_buttons.scss" />
+    <None Include="wwwroot\assets\core\scss\_card.scss" />
+    <None Include="wwwroot\assets\core\scss\_carousel.scss" />
+    <None Include="wwwroot\assets\core\scss\_close.scss" />
+    <None Include="wwwroot\assets\core\scss\_code.scss" />
+    <None Include="wwwroot\assets\core\scss\_custom-forms.scss" />
+    <None Include="wwwroot\assets\core\scss\_dropdown.scss" />
+    <None Include="wwwroot\assets\core\scss\_forms.scss" />
+    <None Include="wwwroot\assets\core\scss\_functions.scss" />
+    <None Include="wwwroot\assets\core\scss\_grid.scss" />
+    <None Include="wwwroot\assets\core\scss\_images.scss" />
+    <None Include="wwwroot\assets\core\scss\_input-group.scss" />
+    <None Include="wwwroot\assets\core\scss\_jumbotron.scss" />
+    <None Include="wwwroot\assets\core\scss\_list-group.scss" />
+    <None Include="wwwroot\assets\core\scss\_media.scss" />
+    <None Include="wwwroot\assets\core\scss\_mixins.scss" />
+    <None Include="wwwroot\assets\core\scss\_modal.scss" />
+    <None Include="wwwroot\assets\core\scss\_nav.scss" />
+    <None Include="wwwroot\assets\core\scss\_navbar.scss" />
+    <None Include="wwwroot\assets\core\scss\_pagination.scss" />
+    <None Include="wwwroot\assets\core\scss\_popover.scss" />
+    <None Include="wwwroot\assets\core\scss\_print.scss" />
+    <None Include="wwwroot\assets\core\scss\_progress.scss" />
+    <None Include="wwwroot\assets\core\scss\_reboot.scss" />
+    <None Include="wwwroot\assets\core\scss\_root.scss" />
+    <None Include="wwwroot\assets\core\scss\_tables.scss" />
+    <None Include="wwwroot\assets\core\scss\_tooltip.scss" />
+    <None Include="wwwroot\assets\core\scss\_transitions.scss" />
+    <None Include="wwwroot\assets\core\scss\_type.scss" />
+    <None Include="wwwroot\assets\core\scss\_utilities.scss" />
+    <None Include="wwwroot\assets\core\scss\_variables.scss" />
+    <None Include="wwwroot\assets\css\azzara.css.map" />
+    <None Include="wwwroot\assets\css\azzara.min.css.map" />
+    <None Include="wwwroot\assets\css\bootstrap.min.css.map" />
+    <None Include="wwwroot\assets\fonts\flaticon\Flaticon.svg" />
+    <None Include="wwwroot\assets\fonts\flaticon\_flaticon.scss" />
+    <None Include="wwwroot\assets\fonts\fontawesome\fa-brands-400.svg" />
+    <None Include="wwwroot\assets\fonts\fontawesome\fa-brands-400.woff2" />
+    <None Include="wwwroot\assets\fonts\fontawesome\fa-regular-400.svg" />
+    <None Include="wwwroot\assets\fonts\fontawesome\fa-regular-400.woff2" />
+    <None Include="wwwroot\assets\fonts\fontawesome\fa-solid-900.svg" />
+    <None Include="wwwroot\assets\fonts\fontawesome\fa-solid-900.woff2" />
+    <None Include="wwwroot\assets\js\core\bootstrap.min.js" />
+    <None Include="wwwroot\assets\js\core\jquery.3.2.1.min.js" />
+    <None Include="wwwroot\assets\js\core\popper.min.js" />
+    <None Include="wwwroot\assets\js\demo.js" />
+    <None Include="wwwroot\assets\js\plugin\bootstrap-notify\bootstrap-notify.min.js" />
+    <None Include="wwwroot\assets\js\plugin\bootstrap-toggle\bootstrap-toggle.min.js" />
+    <None Include="wwwroot\assets\js\plugin\chart-circle\circles.min.js" />
+    <None Include="wwwroot\assets\js\plugin\chart.js\chart.min.js" />
+    <None Include="wwwroot\assets\js\plugin\datatables\datatables.min.js" />
+    <None Include="wwwroot\assets\js\plugin\dropzone\dropzone.min.js" />
+    <None Include="wwwroot\assets\js\plugin\gmaps\gmaps.js" />
+    <None Include="wwwroot\assets\js\plugin\jquery-scrollbar\jquery.scrollbar.min.js" />
+    <None Include="wwwroot\assets\js\plugin\jquery-ui-1.12.1.custom\jquery-ui.min.js" />
+    <None Include="wwwroot\assets\js\plugin\jquery-ui-touch-punch\jquery.ui.touch-punch.min.js" />
+    <None Include="wwwroot\assets\js\plugin\jquery.sparkline\jquery.sparkline.min.js" />
+    <None Include="wwwroot\assets\js\plugin\jquery.validate\jquery.validate.min.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\jquery.vmap.min.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\continents\jquery.vmap.africa.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\continents\jquery.vmap.asia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\continents\jquery.vmap.australia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\continents\jquery.vmap.europe.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\continents\jquery.vmap.north-america.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\continents\jquery.vmap.south-america.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.algeria.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.argentina.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.brazil.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.canada.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.croatia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.europe.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.france.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.germany.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.greece.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.indonesia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.iran.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.iraq.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.new_regions_france.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.russia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.serbia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.tunisia.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.turkey.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.ukraine.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.usa.counties.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.usa.districts.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.usa.js" />
+    <None Include="wwwroot\assets\js\plugin\jqvmap\maps\jquery.vmap.world.js" />
+    <None Include="wwwroot\assets\js\plugin\moment\moment.min.js" />
+    <None Include="wwwroot\assets\js\plugin\summernote\summernote-bs4.min.js" />
+    <None Include="wwwroot\assets\js\plugin\sweetalert\sweetalert.min.js" />
+    <None Include="wwwroot\assets\js\plugin\webfont\webfont.min.js" />
+    <None Include="wwwroot\assets\js\ready.js" />
+    <None Include="wwwroot\assets\js\ready.min.js" />
+    <None Include="wwwroot\assets\js\setting-demo.js" />
+    <None Include="wwwroot\assets\sass\azzara.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_activityfeed.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_alerts.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_avatars.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_badges.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_breadcrumbs.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_buttons.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_cards.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_charts.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_dropdowns.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_inputs.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_listgroup.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_loader.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_maps.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_messages.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_modals.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_navbars.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_navsearch.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_navtabs.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_paginations.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_popovers.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_progress.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_projects.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_rating.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_settings.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_sliders.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_tables.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_tasks.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_tile.scss" />
+    <None Include="wwwroot\assets\sass\azzara\components\_timeline.scss" />
+    <None Include="wwwroot\assets\sass\azzara\plugins\_animate.scss" />
+    <None Include="wwwroot\assets\sass\azzara\plugins\_datatables.scss" />
+    <None Include="wwwroot\assets\sass\azzara\plugins\_jqueryscrollbar.scss" />
+    <None Include="wwwroot\assets\sass\azzara\plugins\_jqueryui.scss" />
+    <None Include="wwwroot\assets\sass\azzara\plugins\_sweetalert.scss" />
+    <None Include="wwwroot\assets\sass\azzara\plugins\_toggle.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_background.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_components.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_flaticon.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_font-awesome.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_layouts-colors.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_layouts.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_login.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_outlinefocus.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_pagenotfound.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_plugins.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_responsive.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_typography.scss" />
+    <None Include="wwwroot\assets\sass\azzara\_variables.scss" />
     <None Include="wwwroot\js\site.js" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
