--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "connectionStrings": {
-    "DataConnection": "Server=DESKTOP-8DKPDVO\\SQLEXPRESS;Database=mySkol;Trusted_Connection=True"
+    "DataConnection": "Server=DESKTOP-8DKPDVO\\SQLEXPRESS;Database=mySkol;User=Osarn;Password=12345;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
