--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,11 +1,13 @@
 {
-  "connectionStrings": {
-    "DataConnection": "Server=DESKTOP-8DKPDVO\\SQLEXPRESS;Database=mySkol;User=Osarn;Password=12345;Trusted_Connection=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"connectionStrings": {
+		"DataConnection": "Server=DESKTOP-EGD1766\\SQLEXPRESS;Database=mySkolData;User Id=mySkolAPI;password=Oscar@01**;Trusted_Connection=True"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
+
+//"Server=DESKTOP-8DKPDVO\\SQLEXPRESS;Database=mySkol;User=Osarn;Password=12345;Trusted_Connection=True"
